// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`removeSourceDatastore removes entire mapping if no source datastores remain 1`] = `undefined`;

exports[`removeSourceDatastore removes specified source datastore 1`] = `
Object {
  "created_on": "2017-10-06T16:41:09Z",
  "directory_hierarchy_supported": true,
  "ems_ref": "datastore-874",
  "ems_ref_obj": "datastore-874",
  "free_space": 3389349027840,
  "href": "http://localhost:3000/api/data_stores/13",
  "id": "1-1",
  "last_perf_capture_on": "2018-01-21T01:00:00Z",
  "last_scan_on": "2018-01-21T00:05:45Z",
  "location": "a0f0178e-ddec1f02-0000-000000000000",
  "master": false,
  "multiplehostaccess": 1,
  "name": "RHVCluster1-Shared-NFS-1",
  "nodes": Array [
    Object {
      "created_on": "2017-10-06T16:41:09Z",
      "directory_hierarchy_supported": true,
      "ems_ref": "datastore-871",
      "ems_ref_obj": "datastore-871",
      "free_space": 1109023260672,
      "href": "http://localhost:3000/api/data_stores/2",
      "id": "1-2",
      "last_perf_capture_on": "2018-01-21T01:00:00Z",
      "last_scan_on": "2018-01-21T00:00:56Z",
      "location": "3ac00f25-19a416be-56d6-000e1eaac6a0",
      "master": false,
      "multiplehostaccess": 0,
      "name": "VMWareCluster1-DS2",
      "raw_disk_mappings_supported": true,
      "storage_domain_type": null,
      "store_type": "VMFS",
      "thin_provisioning_supported": true,
      "total_space": 1192121860096,
      "uncommitted": 63288031245,
      "updated_on": "2018-01-21T01:02:35Z",
    },
  ],
  "raw_disk_mappings_supported": false,
  "storage_domain_type": null,
  "store_type": "NFS41",
  "thin_provisioning_supported": true,
  "total_space": 5388852264960,
  "uncommitted": 3917934592000,
  "updated_on": "2018-01-21T01:02:38Z",
}
`;

exports[`updateMappings removes specified source datastore 1`] = `
Object {
  "created_on": "2017-10-06T16:41:09Z",
  "drs_automation_level": "fullyAutomated",
  "drs_enabled": false,
  "drs_migration_threshold": 3,
  "effective_cpu": 109356,
  "effective_memory": 790163881984,
  "ems_id": "1",
  "ems_ref": "domain-c7",
  "ems_ref_obj": "domain-c7",
  "ha_admit_control": true,
  "ha_enabled": false,
  "ha_max_failures": 1,
  "href": "http://localhost:3000/api/clusters/1",
  "id": "1",
  "last_perf_capture_on": null,
  "name": "RHV-1",
  "nodes": Array [
    Object {
      "created_on": "2017-10-06T16:41:09Z",
      "directory_hierarchy_supported": true,
      "ems_ref": "datastore-874",
      "ems_ref_obj": "datastore-874",
      "free_space": 3389349027840,
      "href": "http://localhost:3000/api/data_stores/13",
      "id": "1-1",
      "last_perf_capture_on": "2018-01-21T01:00:00Z",
      "last_scan_on": "2018-01-21T00:05:45Z",
      "location": "a0f0178e-ddec1f02-0000-000000000000",
      "master": false,
      "multiplehostaccess": 1,
      "name": "RHVCluster1-Shared-NFS-1",
      "nodes": Array [
        Object {
          "created_on": "2017-10-06T16:41:09Z",
          "directory_hierarchy_supported": true,
          "ems_ref": "datastore-871",
          "ems_ref_obj": "datastore-871",
          "free_space": 1109023260672,
          "href": "http://localhost:3000/api/data_stores/2",
          "id": "1-2",
          "last_perf_capture_on": "2018-01-21T01:00:00Z",
          "last_scan_on": "2018-01-21T00:00:56Z",
          "location": "3ac00f25-19a416be-56d6-000e1eaac6a0",
          "master": false,
          "multiplehostaccess": 0,
          "name": "VMWareCluster1-DS2",
          "raw_disk_mappings_supported": true,
          "storage_domain_type": null,
          "store_type": "VMFS",
          "thin_provisioning_supported": true,
          "total_space": 1192121860096,
          "uncommitted": 63288031245,
          "updated_on": "2018-01-21T01:02:35Z",
        },
      ],
      "raw_disk_mappings_supported": false,
      "storage_domain_type": null,
      "store_type": "NFS41",
      "thin_provisioning_supported": true,
      "total_space": 5388852264960,
      "uncommitted": 3917934592000,
      "updated_on": "2018-01-21T01:02:38Z",
    },
  ],
  "type": null,
  "uid_ems": "domain-c7",
  "updated_on": "2018-01-20T23:12:00Z",
}
`;

exports[`updateMappings selected node is a target datastore removes entire datastores step mapping if no target datastores remain 1`] = `undefined`;

exports[`updateMappings selected node is a target datastore removes specified target datastore along with its mapped source datastores 1`] = `
Object {
  "created_on": "2017-10-06T16:41:09Z",
  "drs_automation_level": "fullyAutomated",
  "drs_enabled": false,
  "drs_migration_threshold": 3,
  "effective_cpu": 109356,
  "effective_memory": 790163881984,
  "ems_id": "1",
  "ems_ref": "domain-c7",
  "ems_ref_obj": "domain-c7",
  "ha_admit_control": true,
  "ha_enabled": false,
  "ha_max_failures": 1,
  "href": "http://localhost:3000/api/clusters/1",
  "id": "1",
  "last_perf_capture_on": null,
  "name": "RHV-1",
  "nodes": Array [
    Object {
      "created_on": "2017-10-06T16:41:09Z",
      "directory_hierarchy_supported": true,
      "ems_ref": "datastore-874",
      "ems_ref_obj": "datastore-874",
      "free_space": 3389349027840,
      "href": "http://localhost:3000/api/data_stores/15",
      "id": "2-1",
      "last_perf_capture_on": "2018-01-21T01:00:00Z",
      "last_scan_on": "2018-01-21T00:05:45Z",
      "location": "a0f0178e-ddec1f02-0000-000000000000",
      "master": false,
      "multiplehostaccess": 1,
      "name": "RHVCluster2-Shared-NFS-1",
      "nodes": Array [
        Object {
          "created_on": "2017-10-06T16:41:09Z",
          "directory_hierarchy_supported": true,
          "ems_ref": "datastore-871",
          "ems_ref_obj": "datastore-871",
          "free_space": 1109023260672,
          "href": "http://localhost:3000/api/data_stores/2",
          "id": "1-2",
          "last_perf_capture_on": "2018-01-21T01:00:00Z",
          "last_scan_on": "2018-01-21T00:00:56Z",
          "location": "3ac00f25-19a416be-56d6-000e1eaac6a0",
          "master": false,
          "multiplehostaccess": 0,
          "name": "VMWareCluster1-DS2",
          "raw_disk_mappings_supported": true,
          "storage_domain_type": null,
          "store_type": "VMFS",
          "thin_provisioning_supported": true,
          "total_space": 1192121860096,
          "uncommitted": 63288031245,
          "updated_on": "2018-01-21T01:02:35Z",
        },
      ],
      "raw_disk_mappings_supported": false,
      "storage_domain_type": null,
      "store_type": "NFS41",
      "thin_provisioning_supported": true,
      "total_space": 5388852264960,
      "uncommitted": 3917934592000,
      "updated_on": "2018-01-21T01:02:38Z",
    },
  ],
  "type": null,
  "uid_ems": "domain-c7",
  "updated_on": "2018-01-20T23:12:00Z",
}
`;
